--- a/Depth-First-Search/poj1526.html
+++ b/Depth-First-Search/poj1526.html
@@ -1,15 +1,11 @@
 <h1 align='center'><font color='blue'> Call Forwarding </font></h1>
-<table align='center'>
+<table align='center' cellspacing='15px'>
 	<tr>
-		<td><strong>Time Limit: </strong></td>
-		<td align='left'>1000MS</td>
-		<td><strong>Memory Limit: </strong></td>
-		<td>10000K</td>
+		<td style="margin:10px"><strong>Time Limit: </strong>1000MS</td>
+		<td style="margin:10px"><strong>Memory Limit: </strong>10000K</td>
 	</tr>
 	<tr>
-		<td><strong>Total Submissions: </strong></td>
-		<td>335</td>
-		<td><strong>Accepted: </strong></td>
-		<td>132</td>
+		<td style="margin:10px"><strong>Total Submissions: </strong>335</td>
+		<td style="margin:10px"><strong>Accepted: </strong>132</td>
 	</tr>
 </table>
